Поправленна база, добавил страницу детального просмотра машины

--- a/my_silant/templates/machine.html
+++ b/my_silant/templates/machine.html
@@ -5,26 +5,24 @@
     <title>Title</title>
 </head>
 <body>
-    {% for m in machine %}
-        <p>{{m.number_machine}}</p>
-        <p>{{m.technique_model}}</p>
-        <p>{{m.engine_model}}</p>
-        <p>{{m.engine_number}}</p>
-        <p>{{m.transmission_model}}</p>
-        <p>{{m.transmission_number}}</p>
-        <p>{{m.drive_axle_model}}</p>
-        <p>{{m.drive_axle_number}}</p>
-        <p>{{m.steering_bridge_model}}</p>
-        <p>{{m.steering_bridge_number}}</p>
+        <p>{{machine.number_machine}}</p>
+        <p>{{machine.technique_model}}</p>
+        <p>{{machine.engine_model}}</p>
+        <p>{{machine.engine_number}}</p>
+        <p>{{machine.transmission_model}}</p>
+        <p>{{machine.transmission_number}}</p>
+        <p>{{machine.drive_axle_model}}</p>
+        <p>{{machine.drive_axle_number}}</p>
+        <p>{{machine.steering_bridge_model}}</p>
+        <p>{{machine.steering_bridge_number}}</p>
         {% if is_aut %}
-        <p>{{m.supply_contract}}</p>
-        <p>{{m.shipping_date}}</p>
-        <p>{{m.consignee}}</p>
-        <p>{{m.delivery_address}}</p>
-        <p>{{m.equipment}}</p>
-        <p>{{m.client}}</p>
-        <p>{{m.service_company}}</p>
+        <p>{{machine.supply_contract}}</p>
+        <p>{{machine.shipping_date}}</p>
+        <p>{{machine.consignee}}</p>
+        <p>{{machine.delivery_address}}</p>
+        <p>{{machine.equipment}}</p>
+        <p>{{machine.client}}</p>
+        <p>{{machine.service_company}}</p>
         {% endif %}
-    {% endfor %}
 </body>
 </html>
