--- a/my_silant/templates/sign/logout.html
+++ b/my_silant/templates/sign/logout.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 <body>
+{% block content %}
 <h2> Вы вышли из системы </h2>
-<h1><a href="/">Simple SignUp/SignIn app</a></h1>
+<h1><a href="/">Войти</a></h1>
+{% endblock content %}
 </body>
 </html>
