--- a/my_silant/templates/search.html
+++ b/my_silant/templates/search.html
@@ -1,72 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Small Business - Start Bootstrap Template</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        {% load static %}
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-5">
-                <img src="/static/img/Fon_1x.png" width="40" height="60" alt="logo">
-                <p class="navbar-brand" >+7-8352-20-12-09, telegram</p>
-                <p class="navbar-brand" >Электронная сервисная книжка "Мой Силант"</p>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Вход</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Page Content-->
-        <div class="container px-4 px-lg-5">
-            <!-- Heading Row-->
-            <div class="row gx-4 gx-lg-5 align-items-center my-5">
+{% extends 'base.html' %}
+<!-- saved from url=(0019)http://localhost/?# -->
+<html><script type="text/javascript" src="chrome-extension://kajfghlhfkcocafkcjlajldicbikpgnp/catcher.js"><!-- script injected by Request Maker --></script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Oleg</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="csrf-param" content="authenticity_token">
+<meta name="csrf-token" content="-dcNdZ5G4WIKAHhCrD0vBLrJGXvL6ySZynoJiTkTk12qV3w7n3uyiW-ZoH3l0WiXTGuWPpgMch3fBxndBuH4-Q">
 
-                <div class="col-lg-8">
-                    <h1 class="font-weight-light">Проверьте комплектацию и технические характеристики техники Силант</h1>
-                    <p>Проверьте комплектацию и технические характеристики техники Силант</p>
-                    <form action="{% url 'search' %}">
-                      <input type="search" placeholder="Search" aria-label="Search" name="search">
-                      <input class="btn btn-primary" type="submit" value="Найти">
-                    </form>
-                </div>
-            </div>
-            <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body">
-                    {% for m in machine %}
-                    <p class="text-white m-0">{{m.number_machine}}</p>
-                    <p class="text-white m-0">{{m.technique_model}}</p>
-                    <p class="text-white m-0">{{m.engine_model}}</p>
-                    <p class="text-white m-0">{{m.engine_number}}</p>
-                    <p class="text-white m-0">{{m.transmission_model}}</p>
-                    <p class="text-white m-0">{{m.transmission_number}}</p>
-                    <p class="text-white m-0">{{m.drive_axle_model}}</p>
-                    <p class="text-white m-0">{{m.drive_axle_number}}</p>
-                    <p class="text-white m-0">{{m.steering_bridge_model}}</p>
-                    <p class="text-white m-0">{{m.steering_bridge_number}}</p>
-                    {% endfor %}
-                </div>
-            </div>
-            <!-- Content Row-->
+    {% load static %}
+    <link rel="stylesheet" media="all" href="{% static 'olegu/Oleg_files/application.debug-2cb96df4866c9f40e0644ec44ed070e52bf590b47e8bc907418e140311fdd9d4.css' %}" data-turbolinks-track="reload">
+    <script src="{% static 'olegu/Oleg_files/application-271cf8931bb708d2d8bb.js' %}" data-turbolinks-track="reload"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'olegu/Oleg_files/includes.css' %}"><script async="" type="text/javascript" src="./Oleg_files/vendor.js"></script></head>
+
+  <body data-new-gr-c-s-check-loaded="14.1091.0" data-gr-ext-installed="">
+    <header>
+      <div class="centrator">
+        <div class="leftside">
+          <div id="toplogo"><img srcset="/static/olegu/Oleg_files/Fon_2x-095de2741403db24ca64b83d02090237171be06c89578e6a182ada0d17e97c85.png 2x" src="/static/olegu/Oleg_files/Fon_1x-b7ee6391eb32c8c7c690b000fd3de4708f4e89785879ddfa4c32fac274f0b1f9.png"></div>
         </div>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">+7-8352-20-12-09, telegram Мой Силант 2022</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
-</html>
+        <div class="rightside">
+          <div class="line">
+            <div id="contacts" class="p-l-2">
+              <span class="phone"><a href="tel:+7-8352-20-12-09">+7-8352-20-12-09</a></span>
+              <span><a href="http://localhost/?#"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 240.1 240.1"><lineargradient id="a" x1="-838.041" x2="-838.041" y1="660.581" y2="660.343" gradientTransform="matrix(1000 0 0 -1000 838161 660581)" gradientUnits="userSpaceOnUse"><stop offset="0" style="stop-color:#2aabee"></stop><stop offset="1" style="stop-color:#229ed9"></stop></lineargradient><circle cx="120.1" cy="120.1" r="120.1" fill="url(#a)" fill-rule="evenodd" clip-rule="evenodd"></circle><path fill="#FFF" fill-rule="evenodd" d="M54.3 118.8c35-15.2 58.3-25.3 70-30.2 33.3-13.9 40.3-16.3 44.8-16.4 1 0 3.2.2 4.7 1.4 1.2 1 1.5 2.3 1.7 3.3s.4 3.1.2 4.7c-1.8 19-9.6 65.1-13.6 86.3-1.7 9-5 12-8.2 12.3-7 .6-12.3-4.6-19-9-10.6-6.9-16.5-11.2-26.8-18-11.9-7.8-4.2-12.1 2.6-19.1 1.8-1.8 32.5-29.8 33.1-32.3.1-.3.1-1.5-.6-2.1-.7-.6-1.7-.4-2.5-.2-1.1.2-17.9 11.4-50.6 33.5-4.8 3.3-9.1 4.9-13 4.8-4.3-.1-12.5-2.4-18.7-4.4-7.5-2.4-13.5-3.7-13-7.9.3-2.2 3.3-4.4 8.9-6.7z" clip-rule="evenodd"></path></svg></a></span>
+            </div>
+            <div id="auth_widget">
+              <a href="http://localhost/?#"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="30" viewBox="0 0 600 600"><circle cx="300" cy="300" r="265"></circle><circle cx="300" cy="230" r="115"></circle><path d="M106.819 481.4a205 205 1 0 1 386.362 0"></path></svg>Авторизация</a>
+            </div>
+          </div>
+          <div class="line">
+            <div id="project_name" class="p-l-2">
+              <span>Электронная сервисная книжка «Мой силант»</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    {% block content %}
+    <div id="content">
+      <div class="centrator">
+        <section>
+  <div class="line">
+    <span class="title">
+      Проверьте комплектацию и технические характеристики техники Силант
+    </span>
+  </div>
+  <div class="line">
+    <form action="{% url 'search' %}">
+      <div class="form_line">
+        <div class="input">
+          <input type="text" placeholder="Заводской номер" name="search">
+          <span>Например: ABC-00000776-7834534-67</span>
+        </div>
+        <input type="submit" value="Найти">
+      </div>
+    </form>
+  </div>
+  <div class="line">
+    <div class="column">
+      <div class="search_result">
+        <div class="result_info">
+          <span>Информация о коплектации и технических характеристиках вашей техники</span>
+        </div>
+        <div class="result_collection">
+          {% if machine != 'К сожалению ничего не найдено :('%}
+          <table>
+            <tbody><tr>
+              <th class="nam left">Зав. № машины</th>
+              <th class="nam left">Модель техники</th>
+              <th class="nam left">Модель двигателя</th>
+              <th class="nam left">Зав. № двигателя</th>
+              <th class="nam left">Модель трансмиссии</th>
+              <th class="nam left">Зав. № трансмиссии</th>
+              <th class="nam left">Модель ведущего моста</th>
+              <th class="nam left">Зав. № ведущего моста</th>
+              <th class="nam left">Модель управляемого моста</th>
+              <th class="nam left">Зав. № управляемого моста</th>
+              {% if is_aut %}
+              <th class="nam left">Договор поставки №, дата</th>
+              <th class="nam left">Дата отгрузки с завода</th>
+              <th class="nam left">Грузополучатель (конечный потребитель)</th>
+              <th class="nam left">Адрес поставки (эксплуатации)</th>
+              <th class="nam left">Комплектация (доп. опции)</th>
+              <th class="nam left">Клиент</th>
+              <th class="nam left">Сервисная компания</th>
+              {% endif %}
+            </tr>
+            {% for m in machine %}
+            <tr>
+              <td class="nam left">{{m.number_machine}}</td>
+              <td class="nam left">{{m.technique_model}}</td>
+              <td class="nam left">{{m.engine_model}}</td>
+              <td class="nam left">{{m.engine_number}}</td>
+              <td class="nam left">{{m.transmission_model}}</td>
+              <td class="nam left">{{m.transmission_number}}</td>
+              <td class="nam left">{{m.drive_axle_model}}</td>
+              <td class="nam left">{{m.drive_axle_number}}</td>
+              <td class="nam left">{{m.steering_bridge_model}}</td>
+              <td class="nam left">{{m.steering_bridge_number}}</td>
+              {% if is_aut %}
+              <td class="nam left">{{m.supply_contract}}</td>
+              <td class="nam left">{{m.shipping_date}}</td>
+              <td class="nam left">{{m.consignee}}</td>
+              <td class="nam left">{{m.delivery_address}}</td>
+              <td class="nam left">{{m.equipment}}</td>
+              <td class="nam left">{{m.client}}</td>
+              <td class="nam left">{{m.service_company}}</td>
+              {% endif %}
+            </tr>
+          </tbody></table>
+          {% endfor %}
+          {% endif %}
+          <div class="search_result empty_result">
+        <span>
+          {% if machine == 'К сожалению ничего не найдено :(' %}
+          {{ machine }}
+          {% endif %}
+        </span>
+      </div>
+        </div>
+      </div>
+        {% endblock content %}
+    <footer>
+      <div class="centrator">
+        <div class="leftside">
+          <div class="line">
+            <div id="contacts">
+              <span class="phone"><a href="tel:+7-8352-20-12-09">+7-8352-20-12-09</a></span>
+              <span><a><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 240.1 240.1"><lineargradient id="a" x1="-838.041" x2="-838.041" y1="660.581" y2="660.343" gradientTransform="matrix(1000 0 0 -1000 838161 660581)" gradientUnits="userSpaceOnUse"><stop offset="0" style="stop-color:#2aabee"></stop><stop offset="1" style="stop-color:#229ed9"></stop></lineargradient><circle cx="120.1" cy="120.1" r="120.1" fill="url(#a)" fill-rule="evenodd" clip-rule="evenodd"></circle><path fill="#FFF" fill-rule="evenodd" d="M54.3 118.8c35-15.2 58.3-25.3 70-30.2 33.3-13.9 40.3-16.3 44.8-16.4 1 0 3.2.2 4.7 1.4 1.2 1 1.5 2.3 1.7 3.3s.4 3.1.2 4.7c-1.8 19-9.6 65.1-13.6 86.3-1.7 9-5 12-8.2 12.3-7 .6-12.3-4.6-19-9-10.6-6.9-16.5-11.2-26.8-18-11.9-7.8-4.2-12.1 2.6-19.1 1.8-1.8 32.5-29.8 33.1-32.3.1-.3.1-1.5-.6-2.1-.7-.6-1.7-.4-2.5-.2-1.1.2-17.9 11.4-50.6 33.5-4.8 3.3-9.1 4.9-13 4.8-4.3-.1-12.5-2.4-18.7-4.4-7.5-2.4-13.5-3.7-13-7.9.3-2.2 3.3-4.4 8.9-6.7z" clip-rule="evenodd"></path></svg></a></span>
+            </div>
+          </div>
+        </div>
+        <div class="rightside">
+          <span id="copyright">Мой Силант 2022</span>
+        </div>
+      </div>
+    </footer>
+  <script async="" nonce="" type="text/javascript" id="mini-profiler" src="./Oleg_files/includes.js" data-css-url="/mini-profiler-resources/includes.css?v=35a79b300ab5afa978cb59af0b05e059" data-version="35a79b300ab5afa978cb59af0b05e059" data-path="/mini-profiler-resources/" data-current-id="96ql1vj3cyxyc3289e3" data-ids="96ql1vj3cyxyc3289e3,abv2931k7bokkvsuz3ss" data-horizontal-position="left" data-vertical-position="top" data-trivial="false" data-children="false" data-max-traces="20" data-controls="false" data-total-sql-count="false" data-authorized="true" data-toggle-shortcut="alt+p" data-start-hidden="false" data-collapse-results="true" data-html-container="body" data-hidden-custom-fields="" data-turbo-permanent="false"></script>
