--- a/my_silant/templates/sign/login.html
+++ b/my_silant/templates/sign/login.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 <body>
+{% block content %}
 <h2> Войти в систему </h2>
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
@@ -21,5 +19,6 @@
 
 <input type="submit" value="Войти">
 </form>
+{% endblock content %}
 </body>
 </html>
