Информация разбита по ключевым страницам

--- a/my_silant/templates/complaint_detail.html
+++ b/my_silant/templates/complaint_detail.html
@@ -42,61 +42,87 @@
         <section>
   <div class="line">
     <span class="title">
-      Проверьте комплектацию и технические характеристики техники Силант
+      Рекламации
     </span>
-  </div>
-  <div class="line">
-    <form action="{% url 'search' %}">
-      <div class="form_line">
-        <div class="input">
-          <input type="text" placeholder="Заводской номер" name="search">
-          <span>Например: ABC-00000776-7834534-67</span>
-        </div>
-        <input type="submit" value="Найти">
-      </div>
-    </form>
   </div>
   <div class="line">
     <div class="column">
       <div class="search_result">
+        {% if is_aut %}
         <div class="result_info">
-          <span>Информация о коплектации и технических характеристиках вашей техники</span>
+          <span>Добро пожаловать! {{request.user.first_name}}</span>
         </div>
+        <div class="result_info">
+          <span>Детальная информация по рекламациям вашей техники</span>
+        </div>
+        <div class="search_result">
+        <div class="result_info">
+          <div class="machine">
+            <span>
+              Модель техники {{machine.technique_model}}
+            </span>
+            <span>
+              Заводской номер техники {{machine.number_machine}}
+            </span>
+          </div>
+        </div>
+      </div>
+         <div class="result_collection">
+          <div class="tabs">
+            <a href="{% url 'machine_detail' machine.pk %}">
+            <div class="tab">
+              <span>
+                Общая информация
+              </span>
+            </div>
+            </a>
+            <a href="{% url 'to_detail' machine.pk %}">
+              <div class="tab">
+              <span>
+                ТО
+              </span>
+            </div>
+            </a>
+            <a href="{% url 'complaint_detail' machine.pk %}">
+            <div class="tab active">
+              <span>
+                Рекламации
+              </span>
+            </div>
+            </a>
+          </div>
+         </div>
         <div class="result_collection">
-          {% if machine != 'К сожалению ничего не найдено :('%}
           <table>
             <tbody><tr>
+              <th class="nam left">Дата отказа</th>
+              <th class="nam left">Наработка, м/час</th>
+              <th class="nam left">Узел отказа</th>
+              <th class="nam left">Описание отказа</th>
+              <th class="nam left">Способ восстановления</th>
+              <th class="nam left">Используемые запасные части</th>
+              <th class="nam left">Дата восстановления</th>
               <th class="nam left">Зав. № машины</th>
-              <th class="nam left">Модель техники</th>
-              <th class="nam left">Модель двигателя</th>
-              <th class="nam left">Зав. № двигателя</th>
-              <th class="nam left">Модель трансмиссии</th>
-              <th class="nam left">Зав. № трансмиссии</th>
-              <th class="nam left">Модель ведущего моста</th>
-              <th class="nam left">Зав. № ведущего моста</th>
-              <th class="nam left">Модель управляемого моста</th>
-              <th class="nam left">Зав. № управляемого моста</th>
-            </tr>
-            {% for m in machine %}
+              <th class="nam left">Сервисная компания</th>
             <tr>
-              <td class="nam left">{{m.number_machine}}</td>
-              <td class="nam left">{{m.technique_model}}</td>
-              <td class="nam left">{{m.engine_model}}</td>
-              <td class="nam left">{{m.engine_number}}</td>
-              <td class="nam left">{{m.transmission_model}}</td>
-              <td class="nam left">{{m.transmission_number}}</td>
-              <td class="nam left">{{m.drive_axle_model}}</td>
-              <td class="nam left">{{m.drive_axle_number}}</td>
-              <td class="nam left">{{m.steering_bridge_model}}</td>
-              <td class="nam left">{{m.steering_bridge_number}}</td>
+              {% for c in complaint_d %}
+              <td class="nam left">{{c.date_rejection}}</td>
+              <td class="nam left">{{c.operating_time}}</td>
+              <td class="nam left">{{c.failure_node}}</td>
+              <td class="nam left">{{c.failure_description}}</td>
+              <td class="nam left">{{c.recovery_method}}</td>
+              <td class="nam left">{{c.spare_parts}}</td>
+              <td class="nam left">{{c.recovery_date}}</td>
+              <td class="nam left">{{c.machine_complaint}}</td>
+              <td class="nam left">{{c.service_company_complaint}}</td>
             </tr>
-            {% endfor %}
+            </tr>
+              {% endfor %}
           </tbody></table>
-          {% endif %}
-          {% if machine == 'К сожалению ничего не найдено :(' %}
+          {% else %}
           <div class="search_result empty_result">
             <span>
-              {{ machine }}
+              Авторизуйтесь
             </span>
           </div>
           {% endif %}
