--- a/my_silant/templates/complaint.html
+++ b/my_silant/templates/complaint.html
@@ -46,57 +46,78 @@
     </span>
   </div>
   <div class="line">
-    <form action="{% url 'search' %}">
-      <div class="form_line">
-        <div class="input">
-          <input type="text" placeholder="Заводской номер" name="search">
-          <span>Например: ABC-00000776-7834534-67</span>
-        </div>
-        <input type="submit" value="Найти">
-      </div>
-    </form>
-  </div>
-  <div class="line">
     <div class="column">
       <div class="search_result">
+        {% if is_aut %}
+        <div class="result_info">
+          <span>Добро пожаловать! {{request.user.first_name}}</span>
+        </div>
         <div class="result_info">
           <span>Информация о коплектации и технических характеристиках вашей техники</span>
         </div>
         <div class="result_collection">
-          {% if machine != 'К сожалению ничего не найдено :('%}
+          <div class="tabs">
+            <a href="/user/">
+            <div class="tab">
+              <span>
+                Общая информация
+              </span>
+            </div>
+            </a>
+            <a href="/to/">
+              <div class="tab">
+              <span>
+                ТО
+              </span>
+            </div>
+            </a>
+            <a href="/complaint/">
+            <div class="tab active">
+              <span>
+                Рекламации
+              </span>
+            </div>
+            </a>
+          </div>
+        </div>
+        <div class="result_collection">
+          {% if complaint != 'Нет данных о рекламациях'%}
           <table>
             <tbody><tr>
               <th class="nam left">Зав. № машины</th>
               <th class="nam left">Модель техники</th>
-              <th class="nam left">Модель двигателя</th>
-              <th class="nam left">Зав. № двигателя</th>
-              <th class="nam left">Модель трансмиссии</th>
-              <th class="nam left">Зав. № трансмиссии</th>
-              <th class="nam left">Модель ведущего моста</th>
-              <th class="nam left">Зав. № ведущего моста</th>
-              <th class="nam left">Модель управляемого моста</th>
-              <th class="nam left">Зав. № управляемого моста</th>
-            </tr>
-            {% for m in machine %}
+              <th class="nam left">Детали</th>
+            {% for c in complaint %}
             <tr>
-              <td class="nam left">{{m.number_machine}}</td>
-              <td class="nam left">{{m.technique_model}}</td>
-              <td class="nam left">{{m.engine_model}}</td>
-              <td class="nam left">{{m.engine_number}}</td>
-              <td class="nam left">{{m.transmission_model}}</td>
-              <td class="nam left">{{m.transmission_number}}</td>
-              <td class="nam left">{{m.drive_axle_model}}</td>
-              <td class="nam left">{{m.drive_axle_number}}</td>
-              <td class="nam left">{{m.steering_bridge_model}}</td>
-              <td class="nam left">{{m.steering_bridge_number}}</td>
+              <td class="nam left">{{c.technique_model}}</td>
+              <td class="nam left">{{c.number_machine}}</td>
+              <td class="nam left">
+                <div class="tabs">
+                  <a href="{% url 'complaint_detail' c.pk %}">
+                    <div class="tab">
+                      <span>
+                        детали
+                      </span>
+                    </div>
+                  </a>
+                </div>
+              </td>
+            </tr>
             </tr>
             {% endfor %}
           </tbody></table>
-          {% endif %}
-          {% if machine == 'К сожалению ничего не найдено :(' %}
+            {% endif %}
+          {% if complaint == 'Нет данных о рекламациях' %}
           <div class="search_result empty_result">
             <span>
-              {{ machine }}
+              {{ complaint }}
+            </span>
+          </div>
+          {% endif %}
+          {% else %}
+          <div class="search_result empty_result">
+            <span>
+              Авторизуйтесь
             </span>
           </div>
           {% endif %}
