--- a/my_silant/templates/machine_detail.html
+++ b/my_silant/templates/machine_detail.html
@@ -42,28 +42,57 @@
         <section>
   <div class="line">
     <span class="title">
-      Проверьте комплектацию и технические характеристики техники Силант
+      Общая информация
     </span>
-  </div>
-  <div class="line">
-    <form action="{% url 'search' %}">
-      <div class="form_line">
-        <div class="input">
-          <input type="text" placeholder="Заводской номер" name="search">
-          <span>Например: ABC-00000776-7834534-67</span>
-        </div>
-        <input type="submit" value="Найти">
-      </div>
-    </form>
   </div>
   <div class="line">
     <div class="column">
       <div class="search_result">
+        {% if is_aut %}
         <div class="result_info">
-          <span>Информация о коплектации и технических характеристиках вашей техники</span>
+          <span>Добро пожаловать! {{request.user.first_name}}</span>
+        </div>
+        <div class="result_info">
+          <span>Детальная информация о вашей технике</span>
+        </div>
+        <div class="search_result">
+        <div class="result_info">
+          <div class="machine">
+            <span>
+              Модель техники {{machine.technique_model}}
+            </span>
+            <span>
+              Заводской номер техники {{machine.number_machine}}
+            </span>
+          </div>
+        </div>
+      </div>
+        <div class="result_collection">
+          <div class="tabs">
+            <a href="{% url 'machine_detail' machine.pk %}">
+            <div class="tab active">
+              <span>
+                Общая информация
+              </span>
+            </div>
+            </a>
+            <a href="{% url 'to_detail' machine.pk %}">
+              <div class="tab">
+              <span>
+                ТО
+              </span>
+            </div>
+            </a>
+            <a href="{% url 'complaint_detail' machine.pk %}">
+            <div class="tab">
+              <span>
+                Рекламации
+              </span>
+            </div>
+            </a>
+          </div>
         </div>
         <div class="result_collection">
-          {% if machine != 'К сожалению ничего не найдено :('%}
           <table>
             <tbody><tr>
               <th class="nam left">Зав. № машины</th>
@@ -76,27 +105,38 @@
               <th class="nam left">Зав. № ведущего моста</th>
               <th class="nam left">Модель управляемого моста</th>
               <th class="nam left">Зав. № управляемого моста</th>
+              <th class="nam left">Договор поставки №, дата</th>
+              <th class="nam left">Дата отгрузки с завода</th>
+              <th class="nam left">Грузополучатель (конечный потребитель)</th>
+              <th class="nam left">Адрес поставки (эксплуатации)</th>
+              <th class="nam left">Комплектация (доп. опции)</th>
+              <th class="nam left">Клиент</th>
+              <th class="nam left">Сервисная компания</th>
             </tr>
-            {% for m in machine %}
             <tr>
-              <td class="nam left">{{m.number_machine}}</td>
-              <td class="nam left">{{m.technique_model}}</td>
-              <td class="nam left">{{m.engine_model}}</td>
-              <td class="nam left">{{m.engine_number}}</td>
-              <td class="nam left">{{m.transmission_model}}</td>
-              <td class="nam left">{{m.transmission_number}}</td>
-              <td class="nam left">{{m.drive_axle_model}}</td>
-              <td class="nam left">{{m.drive_axle_number}}</td>
-              <td class="nam left">{{m.steering_bridge_model}}</td>
-              <td class="nam left">{{m.steering_bridge_number}}</td>
+              <td class="nam left">{{machine.number_machine}}</td>
+              <td class="nam left">{{machine.technique_model}}</td>
+              <td class="nam left">{{machine.engine_model}}</td>
+              <td class="nam left">{{machine.engine_number}}</td>
+              <td class="nam left">{{machine.transmission_model}}</td>
+              <td class="nam left">{{machine.transmission_number}}</td>
+              <td class="nam left">{{machine.drive_axle_model}}</td>
+              <td class="nam left">{{machine.drive_axle_number}}</td>
+              <td class="nam left">{{machine.steering_bridge_model}}</td>
+              <td class="nam left">{{machine.steering_bridge_number}}</td>
+              <td class="nam left">{{machine.supply_contract}}</td>
+              <td class="nam left">{{machine.shipping_date}}</td>
+              <td class="nam left">{{machine.consignee}}</td>
+              <td class="nam left">{{machine.delivery_address}}</td>
+              <td class="nam left">{{machine.equipment}}</td>
+              <td class="nam left">{{machine.client}}</td>
+              <td class="nam left">{{machine.service_company}}</td>
             </tr>
-            {% endfor %}
           </tbody></table>
-          {% endif %}
-          {% if machine == 'К сожалению ничего не найдено :(' %}
+          {% else %}
           <div class="search_result empty_result">
             <span>
-              {{ machine }}
+              Авторизуйтесь
             </span>
           </div>
           {% endif %}
