--- a/my_silant/templates/protect/index.html
+++ b/my_silant/templates/protect/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <body>
 {% block content %}
-<h2>Добро пожаловать! {{request.user.username}}</h2>
+<h2>Добро пожаловать! {{request.user.first_name}}</h2>
 <button> <a href="sign/logout/">Выйти</a> </button>
 {% endblock content %}
 </body>
